--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -273,7 +273,7 @@ section .title::after{
 }
 .proj-content .card .card-img-top{
     width: auto;
-    height: 100px;
+    height: auto;
 }
 .projects .proj-content .card:hover{
     background: yellow;
