--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -289,6 +289,11 @@ section .title::after{
     color: black;
     
 }
+.proj-content .card .card-body a::hover{
+    background-color: black;
+    color: white;
+    
+}
 .projects .proj-content .card:hover{
     background: yellow;
     color: darkblue;
