--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -287,13 +287,17 @@ section .title::after{
 }
 .proj-content .card .card-body a{
     color: black;
+    font-size: 12px;
+    padding: 5px 10px;
+    margin-top: 20px;
+    border-radius: 15px;
+    transition: all 0.3s ease;
+    width: max-content;
+    height: max-content;
+    background-color: white;    
     
 }
-.proj-content .card .card-body .btn-primary::hover{
-    background-color: black;
-    color: white;
-    
-}
+
 .projects .proj-content .card:hover{
     background: yellow;
     color: darkblue;
