--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -294,7 +294,7 @@ section .title::after{
     transition: all 0.3s ease;
     width: max-content;
     height: max-content;
-    background-color: white;    
+    background-color: yellow;    
     
 }
 
