--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -283,24 +283,14 @@ section .title::after{
     transition: all 0.3s ease;
     width: max-content;
     height: max-content;
-    background-color: yellow;
-}
-.proj-content .card .card-body btn-primary::hover{
-    background-color: blue;
-}
-.proj-content .card .card-body a{
-    color: black;
-    font-size: 12px;
-    padding: 5px 10px;
-    margin-top: 20px;
-    border-radius: 15px;
-    transition: all 0.3s ease;
-    width: max-content;
-    height: max-content;
-    background-color: yellow;    
-    
+    background-color: white;
 }
 
+.proj-content .card .card-body .btn-primary::hover{
+    background-color: black;
+    color: white;
+    
+}
 .projects .proj-content .card:hover{
     background: yellow;
     color: darkblue;
